@@ -18,16 +18,16 @@
 <TBODY>
 <TR><TD>o<TD>Go to previous object.
 <TR><TD>p<TD>Go to next object.
-<TR><TD>[<TD>Go to previous point.
-<TR><TD>]<TD>Go to next point.
 <TR><TD>C<TD>Go to next contour.
 <TR><TD>c<TD>Go to previous contour.
 <TR><TD>5/6<TD>Go to previous/next contour in same surface.
 <TR><TD>7/8<TD>Go to previous/next surface.
+<TR><TD>[ or &lt;<TD>Go to previous point.
+<TR><TD>] or &gt;<TD>Go to next point.
+<TR><TD>{ or (<TD>Go to first point in contour.
+<TR><TD>} or )<TD>Go to last point in contour.
 <TR><TD>e<TD>Unselect current point.
 <TR><TD>E<TD>Unselect current contour.
-<TR><TD>{<TD>Go to first point in contour.
-<TR><TD>}<TD>Go to last point in contour.
 <TR><TD>n<TD>Create a new contour.
 <TR><TD>N<TD>Create a new contour with a new surface number.
 <TR><TD>0<TD>Create a new object.
@@ -85,7 +85,8 @@ Behavior tab of Options dialog with a default 10.
 <TR><TD>End<TD>Go to Z = 1;
 <TR><TD>Home<TD>Go to Z = max;
 <TR><TD>Insert<TD>Go to middle Z of stack (use Help key next to Home on Mac)
-<TR><TD>Shift-Home<TD>Go to middle Z of stack (for Mac without Help nor Insert)
+<TR><TD>Shift-Home<TD>Go to middle Z of stack (for Mac where Help brings up 
+help)
 <TR><TD>1/2<TD>Previous/Next Time Index.
 <TR><TD>!/@<TD>Set time index to beginning/end (using Start or End for Time in
 Edit-Movie dialog).
